<resources>
    <string name="app_name">StockTrade</string>
    <string name="Tab1">Tab1</string>
    <string name="Tab2">Tab2</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="LTP">LTP</string>
    <string name="change_price">Change price</string>
    <string name="change_per">Change per</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="enter_quantity_amount">Enter Quantity Amount</string>
    <string name="quantity">Quantity</string>
    <string name="order_successful">Order Placed Successfully</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="id">id</string>
    <string name="BSE">BSE</string>
    <string name="NSE">NSE</string>



</resources>