<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="30dp"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/teal_700"
        android:text="@string/quantity"/>
    <EditText
        android:id="@+id/qty"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/enter_quantity_amount"
        android:textColorHint="@color/white"
        android:inputType="number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:textSize="25dp"
        android:text="@string/price"/>
    <EditText
        android:id="@+id/price"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="number" />
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonedit"
            android:text="@string/buy" />

        <Button android:id="@+id/sell"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonedit"
            android:text="@string/sell"
            />
    </LinearLayout>
</LinearLayout>
