<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp">

    <TextView
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/teal_700"
        android:textSize="16dp"
        android:textStyle="bold" />


    <TextView
        android:text="@string/details"
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:textColor="@color/teal_700"
        android:layout_height="wrap_content"
        android:layout_below="@id/name" />

    <TextView
        android:text="@string/LTP"
        android:id="@+id/LTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/teal_700" />
    <TextView
        android:text="@string/change_per"
        android:layout_below="@+id/LTP"
        android:id="@+id/change_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/teal_700" />
    <TextView
        android:text="@string/change_price"
        android:layout_below="@+id/change_per"
        android:id="@+id/change_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/teal_700" />
</RelativeLayout>